--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.servlet.context-path=/app
 server.port=8080
+spring.datasource.url=jdbc:mysql://34.27.120.126/springboot
+spring.datasource.username=root
+spring.datasource.password =springroot
+spring-jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
