Cambiado gcloude por Jaws MariaDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.servlet.context-path=/app
 server.port=8080
-spring.datasource.url=jdbc:mysql://34.27.120.126/springboot
-spring.datasource.username=root
-spring.datasource.password =springroot
+spring.datasource.url=jdbc:mariadb://iu51mf0q32fkhfpl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:8080/demo?useSSL=false
+spring.datasource.username=fvdw59unp0br3vxm
+spring.datasource.password =lk459bhoagn17pjq
 spring-jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
