--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,33 @@
 		<version>3.0.8</version>
 	</dependency>
 
+
+	<dependency>
+		<groupId>com.sparkjava</groupId>
+		<artifactId>spark-core</artifactId>
+		<version>2.9.4</version>
+	</dependency>
+
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter</artifactId>
 	</dependency>
 
 	<dependency>
+		<groupId>com.sparkjava</groupId>
+		<artifactId>spark-template-handlebars</artifactId>
+		<version>2.7.1</version>
+	</dependency>
+
+	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		<exclusions>
+			<exclusion>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-asm</artifactId>
+			</exclusion>
+		</exclusions>
 	</dependency>
 
 	<dependency>
@@ -56,6 +75,13 @@
 		<groupId>com.mysql</groupId>
 		<artifactId>mysql-connector-j</artifactId>
 	</dependency>
+    <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>RELEASE</version>
+        <scope>compile</scope>
+    </dependency>
+
 
 
 
