--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,22 @@
         <scope>compile</scope>
     </dependency>
 
+	<!-- https://mvnrepository.com/artifact/com.vaadin/vaadin-server -->
+	<dependency>
+		<groupId>com.vaadin</groupId>
+		<artifactId>vaadin-server</artifactId>
+		<version>8.17.0</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/com.vaadin/vaadin-client -->
+	<dependency>
+		<groupId>com.vaadin</groupId>
+		<artifactId>vaadin-client</artifactId>
+		<version>8.17.0</version>
+		<scope>provided</scope>
+	</dependency>
+
+
 
 
 
@@ -92,6 +108,9 @@
 		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
+			<configuration>
+				<executable>true</executable>
+			</configuration>
 		</plugin>
 	</plugins>
 </build>
