--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8081
-spring.datasource.url=jdbc:mariadb://iu51mf0q32fkhfpl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xh0v8ea22qqjllc2?useSSL=false
-spring.datasource.username=fvdw59unp0br3vxm
-spring.datasource.password =lk459bhoagn17pjq
+spring.datasource.url=jdbc:mariadb://containers-us-west-76.railway.app:6238/railway?useSSL=false
+spring.datasource.username=root
+spring.datasource.password =k42zWraYVzAIBJWDjBye
 spring-jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
+server.servlet.context-path=/notes
+
 
 # Modificar valores de la DB que están vencidos. Usar railway.
