99% Fix, falta hacer que el JSON muestre categorias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 server.port=8081
-spring.datasource.url=jdbc:mariadb://containers-us-west-76.railway.app:6238/railway?useSSL=false
+spring.datasource.url=jdbc:mysql://containers-us-west-76.railway.app:6238/railway?useSSL=false
 spring.datasource.username=root
 spring.datasource.password =k42zWraYVzAIBJWDjBye
-spring-jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-server.servlet.context-path=/notes
-
-
-# Modificar valores de la DB que están vencidos. Usar railway.
