--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>pruebaTecnica</name>
-	<description>prueba Tecnica para la empresa Ensolves</description>
+	<description>pruebaTecnicaEnsolvers</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -26,11 +26,6 @@
 	</dependency>
 
 
-	<dependency>
-		<groupId>com.sparkjava</groupId>
-		<artifactId>spark-core</artifactId>
-		<version>2.9.4</version>
-	</dependency>
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
