--- a/pom.xml
+++ b/pom.xml
@@ -16,22 +16,15 @@
 	<description>pruebaTecnicaEnsolvers</description>
 	<properties>
 		<java.version>17</java.version>
+		<springframework.version>6.0.1</springframework.version>
+		<springsecurity.version>6.0.1</springsecurity.version>
 	</properties>
 <dependencies>
-
-	<dependency>
-		<groupId>org.mariadb.jdbc</groupId>
-		<artifactId>mariadb-java-client</artifactId>
-		<version>3.0.8</version>
-	</dependency>
-
-
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter</artifactId>
 	</dependency>
-
 
 	<dependency>
 		<groupId>org.modelmapper</groupId>
@@ -56,7 +49,6 @@
 		<artifactId>spring-data-rest-hal-explorer</artifactId>
 	</dependency>
 
-
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
@@ -75,7 +67,7 @@
     <dependency>
         <groupId>org.jetbrains</groupId>
         <artifactId>annotations</artifactId>
-        <version>RELEASE</version>
+        <version>23.1.0</version>
         <scope>compile</scope>
     </dependency>
 	<dependency>
@@ -89,22 +81,46 @@
 	<dependency>
 		<groupId>com.vaadin</groupId>
 		<artifactId>vaadin-server</artifactId>
-		<version>8.17.0</version>
+		<version>8.19.0</version>
 	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/com.vaadin/vaadin-client -->
 	<dependency>
 		<groupId>com.vaadin</groupId>
 		<artifactId>vaadin-client</artifactId>
-		<version>8.17.0</version>
+		<version>8.19.0</version>
 		<scope>provided</scope>
 	</dependency>
+
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-crypto</artifactId>
+		<version>${springsecurity.version}</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-web</artifactId>
+		<version>${springsecurity.version}</version> <!-- esto es para sacar la version de las properties de arriba
+		porque tienen que ser la misma para que funcione entre las 2 security y el proyecto.-->
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-config</artifactId>
+		<version>${springsecurity.version}</version>
+	</dependency>
+
+
+
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 	</dependency>
-<!-- con esta dependencia spring maneja toodo, y yo no tengo que crear una config file -->
+<!-- con esta dependencia spring maneja toodo (lo relacionado a thymyleaf), y yo no tengo que crear una config file (como con Handlebars)-->
 
 </dependencies>
 
