--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,6 @@
 	<description>pruebaTecnicaEnsolvers</description>
 	<properties>
 		<java.version>17</java.version>
-		<springframework.version>6.0.1</springframework.version>
-		<springsecurity.version>6.0.1</springsecurity.version>
 	</properties>
 <dependencies>
 
@@ -44,6 +42,14 @@
 		</exclusions>
 	</dependency>
 
+
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-crypto</artifactId>
+		<version>5.7.3</version>
+	</dependency>
+
+
 	<dependency>
 		<groupId>org.springframework.data</groupId>
 		<artifactId>spring-data-rest-hal-explorer</artifactId>
@@ -59,6 +65,26 @@
 		<artifactId>spring-boot-devtools</artifactId>
 		<optional>true</optional>
 	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-web</artifactId>
+		<version>5.7.3</version>
+	</dependency>
+
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+	<!-- ESTA DEPENDENCIA ROMPE-->
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-config</artifactId>
+		<version>5.7.3</version>
+	</dependency>
+
+
 
 	<dependency>
 		<groupId>com.mysql</groupId>
@@ -91,30 +117,6 @@
 		<version>8.19.0</version>
 		<scope>provided</scope>
 	</dependency>
-
-	<dependency>
-		<groupId>org.springframework.security</groupId>
-		<artifactId>spring-security-crypto</artifactId>
-		<version>${springsecurity.version}</version>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
-	<dependency>
-		<groupId>org.springframework.security</groupId>
-		<artifactId>spring-security-web</artifactId>
-		<version>${springsecurity.version}</version> <!-- esto es para sacar la version de las properties de arriba
-		porque tienen que ser la misma para que funcione entre las 2 security y el proyecto.-->
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
-	<dependency>
-		<groupId>org.springframework.security</groupId>
-		<artifactId>spring-security-config</artifactId>
-		<version>${springsecurity.version}</version>
-	</dependency>
-
-
-
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
