--- a/pom.xml
+++ b/pom.xml
@@ -66,18 +66,18 @@
 		<optional>true</optional>
 	</dependency>
 
-	 <!--<dependency>
+	 <dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-web</artifactId>
 		<version>5.7.3</version>
-	</dependency> -->
+	</dependency>
 
 
-	<!-- <dependency>
+	 <dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-config</artifactId>
 		<version>5.7.3</version>
-	</dependency> -->
+	</dependency>
 
 
 
