Modificaciones al ejercicio & Cambié el script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://db.smygbnosncpaaznuijco.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password =uuSgC89EFzFJ25vx
+spring.datasource.url=jdbc:postgresql://dpg-cntkfim3e1ms73auk14g-a.oregon-postgres.render.com:5432/ensolvers_d6c7
+spring.datasource.username=ensolvers_d6c7_user
+spring.datasource.password =sTlEZpvV6tsm2b2tp7LtYsIJyPkmbN0K
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-
-
